--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^5.15.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -19,6 +20,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1"
   }
 }
